--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.custom-shadow {
+    box-shadow: 0 0 20px rgb(99, 102, 241, 0.4);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* .active{
+    background-color: #F14009;
+    color: #fff;
+} */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+    /* background-color: #0F172A; */
+    background-image: url("./assets/bg.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
